--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_LeftColumn.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_LeftColumn.cshtml
@@ -1,17 +1,18 @@
 ﻿@{ 
-    var menusLeft = GlobalConfig.Menus.Where(x => x.Position == "LeftColumn").ToList();
-    var zoneLeftWidgets = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "LeftSidebar" && x.LayoutName == CurrentLayout).ToList();
-    if ((menusLeft != null && menusLeft.Count > 0) || (zoneLeftWidgets != null && zoneLeftWidgets.Count > 0))
+    var menusLeft = ThemeHelper.GetMenus(ThemeResources.MenuLocation.LeftSidebar, CurrentLanguage);
+    var zoneLeftWidgets = ThemeHelper.GetLayoutZoneWebsiteWidgets(CurrentLayout, ThemeResources.Zones.LeftSidebar);
+
+    if (menusLeft.Count > 0 || zoneLeftWidgets.Count > 0)
     {
         HasLeftColumn = true;
         BodyWidth = BodyWidth - 2;
     }
-    var currentLanguage = LanguageDetector.GetCurrentLanguage();
 }
 
 @if (HasLeftColumn)
 {
     <div class="col-sm-2 pull-left">
+
         <!-- Left Menu Start -->
         @if (menusLeft != null && menusLeft.Count > 0)
         {
@@ -36,20 +37,21 @@
                     }
                 }
             </div>
-                        <div class="clearfix"></div>
+            <div class="clearfix"></div>
         }
         <!-- Left Menu End -->
-        <!-- Left Sidebar Start -->
+
+        <!-- Left Sidebar Widgets Start -->
         @if (zoneLeftWidgets != null && zoneLeftWidgets.Count > 0)
         {
             <div class="row">
                 @foreach (var item in zoneLeftWidgets)
                 {
-                    var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
+                    var widgets = ThemeHelper.GetWidgets(item.WidgetId); 
                     foreach (var widget in widgets)
                     {
                         widget.Init(item.Id);
-                        if (string.IsNullOrEmpty(widget.Language) || string.IsNullOrEmpty(currentLanguage) || currentLanguage.ToLower() == widget.Language.ToLower())
+                        if (string.IsNullOrEmpty(widget.Language) || string.IsNullOrEmpty(CurrentLanguage) || CurrentLanguage.ToLower() == widget.Language.ToLower())
                         {
                             if (widget.DisplayTitle.Trim() != "" || widget.Footer.Trim() != "")
                             {
@@ -82,6 +84,7 @@
                 }
             </div>
         }
-        <!-- Left Sidebar End -->
+        <!-- Left Sidebar Widgets End -->
+
     </div>
 }
