--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Navigation.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Navigation.cshtml
@@ -6,12 +6,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </button>
-            @*<a asp-area="" asp-controller="CmsHome" asp-action="Index" class="navbar-brand">@WebSite.Name</a>*@
-            <div id="navbarWebsiteName" class="navbar-brand navbar-brand-with-top-menu">@GlobalConfig.WebSite.Name</div>
+            </button>            
+            <div id="navbarWebsiteName" class="navbar-brand navbar-brand-with-top-menu">@ThemeHelper.GetWebSiteName()</div>
         </div>
         <div class="navbar-collapse collapse">
-            @Html.Raw(MenuHelper.PrepareMenuHtml("Navigation", LanguageDetector.GetCurrentLanguage()))
+            @Html.Raw(ThemeHelper.PrepareMenuHtml(ThemeResources.MenuLocation.Navigation, CurrentLanguage))
             <div class="userMenu">
                 @await Html.PartialAsync("_SiteLoginPartial")
             </div>
