--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_RightColumn.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_RightColumn.cshtml
@@ -1,12 +1,12 @@
 ﻿@{  
-    var menusRight = GlobalConfig.Menus.Where(x => x.Position == "RightColumn").ToList();
-    var zoneRightWidgets = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "RightSidebar" && x.LayoutName == CurrentLayout).ToList();
-    if ((menusRight != null && menusRight.Count > 0) || (zoneRightWidgets != null && zoneRightWidgets.Count > 0))
+    var menusRight = ThemeHelper.GetMenus(ThemeResources.MenuLocation.RightSidebar, CurrentLanguage);
+    var zoneRightWidgets = ThemeHelper.GetLayoutZoneWebsiteWidgets(CurrentLayout, ThemeResources.Zones.RightSidebar);
+
+    if (menusRight.Count > 0 || zoneRightWidgets.Count > 0)
     {
         HasRightColumn = true;
         BodyWidth = BodyWidth - 2;
     }
-    var currentLanguage = LanguageDetector.GetCurrentLanguage();
 }
 
 @if (HasRightColumn)
@@ -45,11 +45,11 @@
             <div class="row">
                 @foreach (var item in zoneRightWidgets)
                 {
-                    var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
+                    var widgets = ThemeHelper.GetWidgets(item.WidgetId);
                     foreach (var widget in widgets)
                     {
                         widget.Init(item.Id);
-                        if (string.IsNullOrEmpty(widget.Language) || string.IsNullOrEmpty(currentLanguage) || currentLanguage.ToLower() == widget.Language.ToLower())
+                        if (string.IsNullOrEmpty(widget.Language) || string.IsNullOrEmpty(CurrentLanguage) || CurrentLanguage.ToLower() == widget.Language.ToLower())
                         {
                             if (widget.DisplayTitle != "" || widget.Footer != "")
                             {
