--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -131,7 +131,7 @@
                             <!-- /input-group -->
                         </li>*@
                         <li class="active">
-                            <a asp-controller="Admin" asp-action="Index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a asp-controller="Dashboard" asp-action="Index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>                       
                         @Html.Raw(NccMenuHelper.GetAdminMenuHtml(NccMenuHelper.GetModulesAdminMenus()))
                     </ul>
