working on global messaging

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Index.cshtml
@@ -5,12 +5,12 @@
 
 @{
     Layout = ViewBag.Layout;
-    ViewData["PageTitle"] = "Image Gallary";
-    ViewData["PageSubtitle"] = "Manage existing image media";
+    Title = "Image Gallary";
+    SubTitle = "Manage existing image media";
     if (ViewBag.IsFile)
     {
-        ViewData["PageTitle"] = "File Storage";
-        ViewData["PageSubtitle"] = "Manage existing files";
+        Title = "File Storage";
+        SubTitle = "Manage existing files";
     }
 
     var class1 = "";
