--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Delete.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Delete.cshtml
@@ -3,12 +3,12 @@
 
 @{
     Layout = ViewBag.Layout;
-    ViewData["PageTitle"] = "Image Delete";
-    ViewData["PageSubtitle"] = "Delete image";
+    Title = "Image Delete";
+    SubTitle = "Delete image";
     if (ViewBag.IsFile)
     {
-        ViewData["PageTitle"] = "File Delete";
-        ViewData["PageSubtitle"] = "Delete file";
+        Title = "File Delete";
+        SubTitle = "Delete file";
     }
 }
 
