--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Upload.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Upload.cshtml
@@ -3,12 +3,12 @@
 
 @{
     Layout = ViewBag.Layout;
-    ViewData["PageTitle"] = "Media Upload";
-    ViewData["PageSubtitle"] = "Upload images online";
+    Title = "Media Upload";
+    SubTitle = "Upload images online";
     if (ViewBag.IsFile)
     {
-        ViewData["PageTitle"] = "File Upload";
-        ViewData["PageSubtitle"] = "Upload files online";
+        Title = "File Upload";
+        SubTitle = "Upload files online";
     }
 }
 @if(ViewBag.UploadPath!="")
