--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/Widgets/CmsVerticalMenu.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/Widgets/CmsVerticalMenu.cshtml
@@ -1,7 +1,7 @@
 ﻿<ul>
-    <li><a href='/CmsHome'>Home</a></li>
-    <li><a href='/CmsPage'>Pages</a></li>
+    <li><a href='/CmsHome'>Home</a></li>    
     <li><a href='/Post/'>Posts</a></li>
-    <li><a href='/CmsPage/View/?Id=About'>About</a></li>
-    <li><a href='/CmsPage/View/?Id=Contact'>Contact</a></li>    
+    <li><a href='/NeNews'>News</a></li>
+    <li><a href='/CmsPage/Index/?slug=About'>About</a></li>
+    <li><a href='/CmsPage/Index/?slug=Contact'>Contact</a></li>    
 </ul>
