introduces standard resource registration system.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/CreateEdit.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/CreateEdit.cshtml
@@ -4,12 +4,13 @@
 @{
     Layout = Constants.AdminLayoutName;
     var controllerName = "CmsPage";
-    ViewData["PageTitle"] = "Page Create";
-    ViewData["PageSubtitle"] = "Create a new page";
+    Title = "Page Create";
+    SubTitle = "Create a new page";
+
     if (Model.Id > 0)
     {
-        ViewData["PageTitle"] = "Page Edit";
-        ViewData["PageSubtitle"] = "Update information of a page";
+        Title = "Page Edit";
+        SubTitle = "Update information of a page";
     }
 }
 <style>
