--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Head.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Head.cshtml
@@ -1,11 +1,11 @@
 ﻿<meta charset="utf-8" />
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="@MetaDescription">
-<meta name="keywords" content="@MetaKeyword">
-<meta name="author" content="@MetaAuthor">
-<meta name="application-name" content="@MetaApplicationName">
-<meta name="generator" content="@MetaGenerator">
+<meta name="description" content="@MetaDescription" />
+<meta name="keywords" content="@MetaKeyword" />
+<meta name="author" content="@MetaAuthor" />
+<meta name="application-name" content="@MetaApplicationName" />
+<meta name="generator" content="@MetaGenerator" />
 
 @if (Title != null)
 {    
