--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Post/Details.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Post/Details.cshtml
@@ -1,10 +1,9 @@
-﻿@using NetCoreCMS.Framework.Utility
-@using System.Linq
+﻿@using System.Linq
 
 @model NccPost
 @{
 
-    if (!string.IsNullOrEmpty(Model.Layout) && GlobalConfig.ActiveTheme.Layouts.Where(x => x.Name == Model.Layout).FirstOrDefault() != null)
+    if (!string.IsNullOrEmpty(Model.Layout) && ThemeHelper.ActiveTheme.Layouts.Where(x => x.Name == Model.Layout).FirstOrDefault() != null)
     {
         Layout = "_" + Model.Layout;
     }
