--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
@@ -3,6 +3,7 @@
     CurrentLayout = ThemeResources.Layouts.SiteLayout;
     CurrentLanguage = ThemeHelper.GetCurrentLanguage();
     NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(CurrentLanguage);
+    ThemeResources.RegisterResources(CurrentLayout);
 }
  
 <!DOCTYPE html>
