--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_HomeLayout.cshtml
@@ -18,7 +18,10 @@
     @RenderSection("Styles", required: false)
 </head>
 <body id="body">
-
+    <!-- Container for showing global messages. -->
+    <div class="row">
+        @NccRenderGlobalMessages()
+    </div>
     <!-- Loading -->
     @NccRenderLoadingMaskContainer()
     <!-- Zone TOP Start-->
@@ -88,11 +91,7 @@
         <!-- Main content Start -->
         <div class="col-md-@BodyWidth">
             <!-- Featured -->
-            @NccRenderFeaturedSection()
-            <!-- Container for showing global messages. -->
-            <div class="row">
-                @NccRenderGlobalMessageContainer()
-            </div> 
+            @NccRenderFeaturedSection() 
             @NccRenderBody()
         </div>
         <!-- Main content End --> 
